# different-network-transcribe

./: .gitignore  BLUEPRINT_AUDIT_FIX_V2.md  DOWNLOAD.md  DifferentNetworkTranscribe.spec  PANDUAN_INSTALL_DAN_PAKAI.md  PROJECT_BLUEPRINT.md  README.md  TECHNICAL_ADDENDUM.md  THIRD_PARTY_NOTICES.md  VERIFIKASI_DOWNLOAD.ps1  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml  release.yml
app/: config.py  logging_setup.py  main.py  paths.py  runtime.py  version.py
app/backup/: backup_service.py
app/database/: connection.py  migrations.py  repositories.py  worker_repository.py
app/exports/: exporters.py
app/matching/: metadata_matcher.py
app/parsing/: whatsapp_parser.py
app/resources/: strings_id.py
app/services/: application_service.py  chat_import_service.py  diagnostics_service.py  discovery_service.py  metadata_matching_service.py  queue_service.py  reuse_policy.py  worker_control_service.py  worker_status.py
app/transcription/: compatibility.py  engine.py  model_packaging.py  model_registry.py  quality.py
app/ui/: assets.py  brand.py  launch.py  theme.py
docs/: BEGINNER_20_FILE_TEST.md  BRAND_GUIDELINES.md  COMPONENT_ARCHITECTURE.md  DATABASE_MIGRATION_PLAN.md  DEVELOPER_GUIDE.md  FINAL_AUDIT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  MODEL_REGISTRY.md  RELEASE.md  RISKS_AND_ASSUMPTIONS.md  TEST_MATRIX.md  TRANSCRIPT_COMPATIBILITY_KEY.md  USER_GUIDE.md  WORKER_IPC_CONTRACT.md
installer/: different-network-transcribe.iss
migrations/: 0001_initial.sql  0002_add_query_indexes.sql  0003_manual_transcript_preference.sql  0004_backfill_transcript_fts.sql  0005_transcription_selection.sql  0006_fts_contentless_delete.sql
scripts/: build.ps1  build_model_packs.py  download_models.py  scan_private_data.py  setup-dev.ps1  smoke-test.ps1  test.ps1
tests/ui/: test_startup.py
tests/unit/: test_application_service.py  test_architecture_layers.py  test_backup_service.py  test_brand_assets.py  test_chat_import_service.py  test_config.py  test_database_migrations.py  test_diagnostics_service.py  test_discovery_service.py  test_engine.py  test_exporters.py  test_logging_privacy.py  test_metadata_matcher.py  test_metadata_matching_service.py  test_model_packaging.py  test_model_registry.py  test_paths.py  test_quality.py  test_queue_service.py  test_reuse_policy.py  test_runtime.py  test_transcript_filters.py  test_transcript_history.py  test_transcript_search_index.py  test_whatsapp_parser.py  test_worker_control_service.py  test_worker_runtime.py  test_worker_status.py
worker/: main.py  runtime.py
