[project]
name = "different-network-transcribe"
version = "0.2.1"
description = "Transkripsi lokal catatan suara WhatsApp untuk Different Network"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

# Runtime dependencies. Exact pins live in requirements-lock.txt, which is what
# CI and the packaged build install. These ranges document intent.
dependencies = [
    "PySide6==6.8.1.1",
    "faster-whisper==1.1.1",
    "av==13.1.0",
    "huggingface_hub==0.26.5",
    "platformdirs==4.3.6",
    "tomlkit==0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-qt==4.4.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
    "pyinstaller==6.11.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "worker"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "unit: fast pure-logic tests",
    "db: database and migration tests",
    "worker: transcription worker tests",
    "ui: PySide6 UI tests",
    "acceptance: mandatory acceptance scenarios from TECHNICAL_ADDENDUM sections 23-25",
    "perf: performance threshold tests (13,000 synthetic records)",
    "slow: excluded from the fast lane",
    "realmodel: requires a downloaded faster-whisper model",
    "realdata: uses real private audio; NEVER runs in CI; max 20 files",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PTH", "RUF"]
ignore = [
    "E501",   # line length handled by the formatter
    "B008",   # Qt idioms use calls in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = ["^build/", "^dist/", "^\\.venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
